# pokedex-rs

./: Cargo.toml  README.md
src/: main.rs  pokedex.rs  pokemon.rs
