[package]
name = "pokedex"
version = "0.1.0"
authors = ["Eric <e.lim0322@gmail.com>"]
edition = "2018"

[dependencies]
iced = { version = "0.1", features = ["debug", "image", "tokio"] }
Inflector = { version = "0.11.4", default-features = false }
reqwest = { version = "0.10.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

rand = "0.7.3"
serde_json = "1.0"
